--- a/index.html
+++ b/index.html
@@ -12,7 +12,118 @@
 
 <body>
 
+    <div class="container">
+        <div class="row">
+            <div class="col-1">
+                <div class="text ">
+                    <div class="bg-blue">1 col</div>
+                </div>
+            </div>
+            <div class="col-1">
+                <div class="text ">
+                    <div class="bg-blue">1 col</div>
+                </div>
+            </div>
+            <div class="col-1">
+                <div class="text ">
+                    <div class="bg-blue">1 col</div>
+                </div>
+            </div>
+            <div class="col-1">
+                <div class="text ">
+                    <div class="bg-blue">1 col</div>
+                </div>
+            </div>
+            <div class="col-1">
+                <div class="text ">
+                    <div class="bg-blue">1 col</div>
+                </div>
+            </div>
+            <div class="col-1">
+                <div class="text ">
+                    <div class="bg-blue">1 col</div>
+                </div>
+            </div>
+            <div class="col-1">
+                <div class="text ">
+                    <div class="bg-blue">1 col</div>
+                </div>
+            </div>
+            <div class="col-1">
+                <div class="text ">
+                    <div class="bg-blue">1 col</div>
+                </div>
+            </div>
+            <div class="col-1">
+                <div class="text ">
+                    <div class="bg-blue">1 col</div>
+                </div>
+            </div>
+            <div class="col-1">
+                <div class="text ">
+                    <div class="bg-blue">1 col</div>
+                </div>
+            </div>
+            <div class="col-1">
+                <div class="text ">
+                    <div class="bg-blue">1 col</div>
+                </div>
+            </div>
+            <div class="col-1">
+                <div class="text ">
+                    <div class="bg-blue">1 col</div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-2">
+                <div class="text ">
+                    <div class="bg-blue">2 col</div>
+                </div>
+            </div>
+            <div class="col-5">
+                <div class="text ">
+                    <div class="bg-blue">5 col</div>
+                </div>
+            </div>
+            <div class="col-5">
+                <div class="text ">
+                    <div class="bg-blue">5 col</div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <div class="text ">
+                    <div class="bg-blue">12 col</div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-8">
+                <div class="text ">
+                    <div class="bg-blue">8 col</div>
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="text ">
+                    <div class="bg-blue">2 col</div>
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="text ">
+                    <div class="bg-blue">2 col</div>
+                </div>
+            </div>
+        </div>
 
+
+
+
+
+
+
+    </div>
 
 </body>
 
