created second exercise

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <div class="container">
+    <div class="container margtop">
         <div class="row">
             <div class="col-1">
                 <div class="text ">
@@ -116,14 +116,95 @@
                 </div>
             </div>
         </div>
-
-
-
-
-
-
-
+        <div class="row">
+            <div class="col-1">
+                <div class="text ">
+                    <div class="bg-blue">1col</div>
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="text ">
+                    <div class="bg-blue">2 col</div>
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="text ">
+                    <div class="bg-blue">2 col</div>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="text ">
+                    <div class="bg-blue">6 col</div>
+                </div>
+            </div>
+            <div class="col-1">
+                <div class="text ">
+                    <div class="bg-blue">1 col</div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-6 bg-blue">
+                <div class="row pad">
+                    <div class="col-2">
+                        <div class="textgreen">Nested 2 col</div>
+                    </div>
+                    <div class="col-2">
+                        <div class="textgreen">Nested 2 col</div>
+                    </div>
+                    <div class="col-8">
+                        <div class="textgreen">Nested 8 col</div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 bg-blue">
+                <div class="row pad">
+                    <div class="col-6">
+                        <div class="textgreen">Nested 6 col</div>
+                    </div>
+                    <div class="col-6">
+                        <div class="textgreen">Nested 6 col</div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+
+    <div class="container margtop">
+        <div class="row">
+            <div class="col-12 text"></div>
+        </div>
+        <div class="row">
+            <div class="col-1 text"></div>
+            <div class="col-11 text"></div>
+        </div>
+        <div class="row">
+            <div class="col-2 text"></div>
+            <div class="col-10 text"></div>
+        </div>
+        <div class="row">
+            <div class="col-3 text"></div>
+            <div class="col-9 text"></div>
+        </div>
+        <div class="row">
+            <div class="col-4 text"></div>
+            <div class="col-8 text"></div>
+        </div>
+        <div class="row">
+            <div class="col-5 text"></div>
+            <div class="col-7 text"></div>
+        </div>
+        <div class="row">
+            <div class="col-6 text"></div>
+            <div class="col-6 text"></div>
+        </div>
+    </div>
+
+
+
+
+
+
 
 </body>
 
