--- a/index.html
+++ b/index.html
@@ -200,6 +200,46 @@
         </div>
     </div>
 
+    <div class="container margtop">
+        <div class="row">
+            <div class="col-1 col-offset-11 text"></div>
+        </div>
+        <div class="row">
+            <div class="col-2 col-offset-10 text"></div>
+        </div>
+        <div class="row">
+            <div class="col-3 col-offset-9 text"></div>
+        </div>
+        <div class="row">
+            <div class="col-4 col-offset-8 text"></div>
+        </div>
+        <div class="row">
+            <div class="col-5 col-offset-7 text"></div>
+        </div>
+        <div class="row">
+            <div class="col-6 col-offset-6 text"></div>
+        </div>
+        <div class="row">
+            <div class="col-7 col-offset-5 text"></div>
+        </div>
+        <div class="row">
+            <div class="col-8 col-offset-4 text"></div>
+        </div>
+        <div class="row">
+            <div class="col-9 col-offset-3 text"></div>
+        </div>
+        <div class="row">
+            <div class="col-10 col-offset-2 text"></div>
+        </div>
+        <div class="row">
+            <div class="col-11 col-offset-1 text"></div>
+        </div>
+        <div class="row">
+            <div class="col-12 text"></div>
+        </div>
+    </div>
+
+
 
 
 
