creation last exercise

--- a/index.html
+++ b/index.html
@@ -239,6 +239,70 @@
         </div>
     </div>
 
+    <div class="row margtop">
+        <div class="col-7 bg-blue">
+            <div class="row pad">
+                <div class="col-3">
+                    <div class="textgreen"></div>
+                </div>
+                <div class="col-6">
+                    <div class="textgreen"></div>
+                </div>
+                <div class="col-3">
+                    <div class="textgreen"></div>
+                </div>
+            </div>
+        </div>
+        <div class="col-5 bg-blue">
+            <div class="row pad">
+                <div class="col-6">
+                    <div class="textgreen">Nested 6 col</div>
+                </div>
+                <div class="col-6">
+                    <div class="textgreen">Nested 6 col</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row pos1 ">
+        <div class="col-6 text">Start</div>
+    </div>
+
+    <div class="row pos2">
+        <div class="col-6  text">Center</div>
+    </div>
+
+    <div class="row pos3  ">
+        <div class="col-6 text">End</div>
+    </div>
+
+    <div class="row">
+        <div class="col-6 bigblue"></div>
+        <div class="col-6 text alt1">Start</div>
+    </div>
+    <div class="row">
+        <div class="col-6 bigblue"></div>
+        <div class="col-6 text alt2">Center</div>
+    </div>
+    <div class="row">
+        <div class="col-6 bigblue"></div>
+        <div class="col-6 text alt3">End</div>
+    </div>
+
+    <div class="row spaceb margtop bg-blue">
+        <div class="col-2 textgreen pad"></div>
+        <div class="col-2 textgreen pad"></div>
+        <div class="col-2 textgreen pad"></div>
+    </div>
+
+    <div class="row spacea margtop bg-blue">
+        <div class="col-2 textgreen pad"></div>
+        <div class="col-2 textgreen pad"></div>
+        <div class="col-2 textgreen pad"></div>
+    </div>
+
+
 
 </body>
 
